--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
     "husky": "^9.0.11",
+    "js-confetti": "^0.12.0",
     "mocha": "^10.3.0",
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.38",
@@ -56,6 +57,7 @@
     "prettier-plugin-css-order": "^2.0.1",
     "pug": "^3.0.2",
     "sass": "^1.71.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "webpack-stream": "^7.0.0"
   }
 }
